# canot

./: README.md
apps/battery_monitor/: .hgignore  Cargo.toml  Embed.toml  README.txt  run_sensor.sh  run_terminal.sh
apps/battery_monitor/.cargo/: config.toml
apps/battery_monitor/.zed/: settings.json
apps/battery_monitor/src/: application.rs  bsp.rs  consts.rs  error.rs  graphical_elements.rs  main.rs  nvstore.rs  powercalc.rs  types.rs  ui.rs
bsp/stm32f1/: Cargo.toml
bsp/stm32f1/src/: canbuf.rs
bsp/stm32g4/: Cargo.toml
bsp/stm32g4/src/: canbuf.rs  lib.rs
