[package]
name = "battery_monitor"
version = "0.1.0"
authors = ["Corey Schuhen <cschuhen@gmail.com>"]
description = "J1939 battery monitor"
categories = ["embedded", "no-std"]
edition = "2021"

[features]
default = ["js1"]  # JuiceSnoop V1.0
js1 = []
power_sensors = []
sh1108_128_160 = []
terminal = []

[dependencies.rtic]
#path = "/home/cschuhen/rust/ref/rtic/rtic"
version = "=2.1.1"
features = ["thumbv7-backend"]

[dependencies.rtic-sync]
#path = "/home/cschuhen/rust/ref/rtic/rtic-sync"
version = "=1.3.2"


[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
embedded-hal = "1"
embedded-hal-old = {package = "embedded-hal", version = "0.2.7"}
embedded-hal-bus = { version = "0.1", features = ["async", "defmt-03"] }
embedded-hal-async = { version = "1.0" }
embedded-can = { version = "0.4" }
bitflags = "2.5.0"
critical-section="1.1.1"
byteorder = { version = "1", default-features = false }
static_cell = { version = "2", features = ["nightly"]}
nb = "1.0.0"
#embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7", features = [ "defmt"]  }
embassy-futures = { version = "0.1.1", features = [ "defmt"]  }
embassy-time = { version = "0.4.0", features = ["defmt", "generic-queue-8"]  }
embassy-embedded-hal = { version = "0.3.0", features = [ "defmt"]  }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
#rtt-target = { version = "0.3.1", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# alternate panic impls, choose only one!
#   panic-halt
#   panic-semihosting # requires cortex-m-semihosting
#   panic-itm
#   panic-abort
#   panic-ramdump
#   panic-persist
ina226 = { version = "0.3.0", features = [] }
#cortex-m-rtic = "1.1.3"
#systick-monotonic = "1.0.0"
#shared-bus = { version = "0.2.5", features =  ["cortex-m"] }
#bxcan = "0.7.0"
heapless = "0.8"
j1939-async = { path = "../../../j1939/j1939-async", version = "0.1.0-alpha1",features=["embassy"] }
stm32g4 = { path = "../../bsp/stm32g4" }
#stm32f1 = { path = "../../bsp/stm32f1" }
#stm32-device-signature = { version = "0.3.3", features = ["stm32f1"] }
eeprom24x = { version="0.7" }
display-interface-spi = "0.5.0"
embedded-graphics = {version="0.8.1"}
embedded-graphics-core = "0.4"
#embedded-storage = "0.2.0"
void = { version = "1.0.2", default-features = false }
binary-layout = { version = "3.1.3", default-features = false  }

panic-reset = "0.1.1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#spi-memory-async = "0.1.0"
sequential-storage = { version = "4.0.1" , features = ["defmt-03"] }
embedded-storage-async = "0.4.1"
w25q32jv = { version = "0.5", features = ["default", "defmt", "megabits128", "async"]}
oled_async = "0.2.0"
async-debounce = {version="0.2.0"}
tfmt = "0.4.0"
libm = "0.2.11"
#panic-probe = { version = "0.3", features = [] }
# TODO(4) enter your HAL here
# some-hal = "1.2.3"


[patch.crates-io]
#j1939-async = { path = "../../../j1939/j1939-async" }
embedded-graphics = {path="../../../embedded-graphics"}
embedded-graphics-core = {path="../../../embedded-graphics/core"}
oled_async = {path="../../../oled_drivers"}
embassy-stm32 = { path = "../../../embassy/embassy-stm32"}
embassy-sync = { path = "../../../embassy/embassy-sync"}
embassy-futures = { path = "../../../embassy/embassy-futures"}
embassy-time = { path = "../../../embassy/embassy-time"}
embassy-embedded-hal = { path = "../../../embassy/embassy-embedded-hal"}
#eeprom24x = { path="/home/cschuhen/rust/ref/eeprom24x-rs" }
#w25q32jv = { path="/home/cschuhen/rust/w25q32jv/"}


[dev-dependencies]
defmt-test = "0.3"

#[[bin]]
#name = "battery_monitor"
#test = false
#bench = false
#features=["power_sensors"]

#[[bin]]
#name = "terminal"
#test = false
#bench = false
#features=["terminal"]
#path = "src/main.rs"

[profile.dev]
debug = 2
lto = true
codegen-units = 1
#debug = true
opt-level = "z" # +
#opt-level = "s"

[profile.release]
debug = 2
lto = true
codegen-units = 1
#debug = true
opt-level = "z" # +
#opt-level = "s"

